Updates for Django-1.10

--- a/reviews/templates/reviews/reviews_for_instance.html
+++ b/reviews/templates/reviews/reviews_for_instance.html
@@ -2,20 +2,20 @@
 <h1 class="reviews">{% trans 'Reviews' %}</h1>
 
 {% for review in reviews %}
-    <div>        
-        {{review.get_score_display}}
+    <div>
+        {{ review.get_score_display }}
     </div>
     <div>
         {% if review.email %}
-            <a href="mailto:{{review.email}}">
-                {{review.name}}
+            <a href="mailto:{{ review.email }}">
+                {{ review.name }}
             </a>
         {% else %}
-            {{review.name}}
+            {{ review.name }}
         {% endif %}
     </div>
-    <div>        
-        {{review.comment|linebreaks}}
+    <div>
+        {{ review.comment|linebreaks }}
     </div>
 {% endfor %}
 {% if has_rated %}
@@ -24,7 +24,7 @@
     </div>
 {% else %}
     <div>
-        <a href='{% url reviews_add content_type_id content_id %}'
+        <a href='{% url "reviews_add" content_type_id content_id %}'
            target="_blank">
             {% trans 'Add review' %}
         </a>
