--- a/reviews/templates/reviews/review_preview.html
+++ b/reviews/templates/reviews/review_preview.html
@@ -1,45 +1,45 @@
 {% load i18n %}
 <h1>{% trans 'Preview' %}</h1>
 
-<form action="{% url reviews_reedit %}"
+<form action="{% url 'reviews_reedit' %}"
       method="post">
 
     <div>
-        {{name}}
+        {{ name }}
     </div>
     <div>
-        {{email}}
+        {{ email }}
     </div>
     <div>
-        {{request.POST.comment|linebreaks}}
+        {{ request.POST.comment|linebreaks }}
     </div>
     <div>
-        {{request.POST.score}}
+        {{ request.POST.score }}
     </div>
 
     <input type="hidden"
            name="user_name"
-           value="{{request.POST.user_name}}" />
+           value="{{ request.POST.user_name }}" />
 
     <input type="hidden"
            name="user_email"
-           value="{{request.POST.user_email}}" />
+           value="{{ request.POST.user_email }}" />
 
     <input type="hidden"
            name="comment"
-           value="{{request.POST.comment}}" />
+           value="{{ request.POST.comment }}" />
 
     <input type="hidden"
            name="score"
-           value="{{request.POST.score}}" />
+           value="{{ request.POST.score }}" />
 
     <input type="hidden"
            name="content_type_id"
-           value="{{request.POST.content_type_id}}" />
+           value="{{ request.POST.content_type_id }}" />
 
     <input type="hidden"
            name="content_id"
-           value="{{request.POST.content_id}}" />
+           value="{{ request.POST.content_id }}" />
 
     <input type="submit"
            name="edit"
